# localbench

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  vite.config.ts
app-img/: index.html  package-lock.json  package.json
app-img/public/: _headers  manifest.webmanifest  robots.txt  sitemap.xml
app-img/src/: core.worker.ts  main.ts  tokens.css
app-img2pdf/: index.html  package-lock.json  package.json
app-img2pdf/public/: _headers  manifest.webmanifest  robots.txt  sitemap.xml
app-img2pdf/src/: core.worker.ts  main.ts
app-ocr/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app-ocr/public/: _headers  manifest.webmanifest  robots.txt  sitemap.xml
app-ocr/src/: core.worker.ts  main.ts  style.css  tokens.css
app-scrub/: index.html  package-lock.json  package.json  tsconfig.json
app-scrub/public/: manifest.webmanifest  robots.txt  sitemap.xml
app-scrub/src/: core.worker.ts  main.ts
app-zip/: index.html  package-lock.json  package.json
app-zip/public/: manifest.webmanifest  robots.txt  sitemap.xml
app-zip/src/: core.worker.ts  main.ts
app/public/: _headers  manifest.webmanifest  robots.txt  sitemap.xml
app/src/: core.worker.ts  main.ts  style.css
core-ocr/: Cargo.toml
core-ocr/.cargo/: config.toml
core-ocr/src/: lib.rs
core-rs/: Cargo.toml
core-rs/src/: archive_ops.rs  image_ops.rs  imagepdf_ops.rs  lib.rs  metadata_ops.rs
docs/: IMG-APP-TASK.md  IMG-CORE-TASK.md  IMG2PDF-TASK.md  META-SCRUB-TASK.md  OCR-PHASE2-TASK.md  OCR-TASK.md  S0-TASK.md  V1-SPEC.md  ZIP-TASK.md
docs/spikes/: OCR_SPIKE.md
scripts/: build-corpus.sh  build-img-corpus.py  build-img2pdf-corpus.py  build-scrub-corpus.py  build-zip-corpus.py  check-local.mjs  fetch-ocr-models.sh  generate-sw.mjs  img-smoke.mjs  img2pdf-smoke.mjs  ocr-accented-check.mjs  ocr-smoke.mjs  scrub-smoke.mjs  staging-smoke.mjs  zip-smoke.mjs
