[package]
name = "localbench_ocr_core"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Pure-Rust, client-side OCR core for localbench"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25.10", default-features = false, features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "webp",
] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
lopdf = { version = "0.38.0", default-features = false }
ocrs = "=0.12.2"
rten = { version = "=0.24.0", default-features = false, features = ["rten_format"] }
wasm-bindgen = "0.2.105"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1

# Keep this heavy crate isolated from the repository's shared core workspace.
[workspace]
