[package]
name = "localbench_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Deterministic, client-side document core for localbench"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pure-Rust codecs with permissive licenses; default features keep native SIMD
# backends out so the same implementation builds for wasm32-unknown-unknown.
image = { version = "0.25.10", default-features = false, features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "webp",
] }
jpeg-encoder = { version = "0.6.1", default-features = false }
js-sys = { version = "0.3.77", default-features = false }
lopdf = { version = "0.38.0", default-features = false }
wasm-bindgen = "0.2.100"
zune-jpeg = { version = "0.4.21", default-features = false }

# ZIP support is deliberately limited to Store and Deflate. `rust_backend`
# pins flate2 to miniz_oxide, keeping the archive path pure Rust on every target.
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate-flate2"] }

# lopdf pulls `rand` -> `getrandom` transitively (for its encryption support).
# We never invoke randomness (page counting is deterministic), but getrandom must
# still link on wasm32-unknown-unknown, which has no default entropy source.
# Wire getrandom's JS backend for the wasm target only; native builds (cargo test)
# are unaffected. Paired with .cargo/config.toml's getrandom_backend cfg flag.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
